--- a/notebooks/sales_car.ipynb
+++ b/notebooks/sales_car.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 12,
    "id": "604b1c30",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 13,
    "id": "26c63bf8",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
        "4   2,651,357  "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 14,
    "id": "9e257acd",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 15,
    "id": "e4eca39c",
    "metadata": {},
    "outputs": [
@@ -452,7 +452,7 @@
        "freq             1  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 16,
    "id": "f60e3b1c",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 17,
    "id": "4c34e9f6",
    "metadata": {},
    "outputs": [
@@ -534,7 +534,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 18,
    "id": "70af4f7f",
    "metadata": {},
    "outputs": [
@@ -745,7 +745,7 @@
        "[5 rows x 142 columns]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 19,
    "id": "552e300c",
    "metadata": {},
    "outputs": [
@@ -994,7 +994,7 @@
        "[5 rows x 141 columns]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,7 +1006,246 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 20,
+   "id": "691ddf97",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>China</th>\n",
+       "      <th>India</th>\n",
+       "      <th>Japan</th>\n",
+       "      <th>USA</th>\n",
+       "      <th>Germany</th>\n",
+       "      <th>UK</th>\n",
+       "      <th>Brazil</th>\n",
+       "      <th>France</th>\n",
+       "      <th>South Korea</th>\n",
+       "      <th>Italy</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Tanzania</th>\n",
+       "      <th>Tr.&amp;Tobago</th>\n",
+       "      <th>Tunisia</th>\n",
+       "      <th>Turkmenistan</th>\n",
+       "      <th>Uganda</th>\n",
+       "      <th>Uruguay</th>\n",
+       "      <th>Venezuela</th>\n",
+       "      <th>Yemen</th>\n",
+       "      <th>Zambia</th>\n",
+       "      <th>Zimbabwe</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Annee</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>13,757,794</td>\n",
+       "      <td>2,387,197</td>\n",
+       "      <td>4,203,181</td>\n",
+       "      <td>5,635,432</td>\n",
+       "      <td>2,916,259</td>\n",
+       "      <td>2,030,846</td>\n",
+       "      <td>2,856,540</td>\n",
+       "      <td>2,251,669</td>\n",
+       "      <td>1,237,482</td>\n",
+       "      <td>1,961,580</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2,000</td>\n",
+       "      <td>10,000</td>\n",
+       "      <td>45,000</td>\n",
+       "      <td>4,500</td>\n",
+       "      <td>3,000</td>\n",
+       "      <td>40,000</td>\n",
+       "      <td>68,210</td>\n",
+       "      <td>2,000</td>\n",
+       "      <td>2,000</td>\n",
+       "      <td>2,000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011</th>\n",
+       "      <td>14,472,416</td>\n",
+       "      <td>2,510,313</td>\n",
+       "      <td>3,509,036</td>\n",
+       "      <td>6,089,403</td>\n",
+       "      <td>3,173,634</td>\n",
+       "      <td>1,941,253</td>\n",
+       "      <td>2,901,647</td>\n",
+       "      <td>2,204,229</td>\n",
+       "      <td>1,293,501</td>\n",
+       "      <td>1,749,740</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3,000</td>\n",
+       "      <td>10,000</td>\n",
+       "      <td>35,000</td>\n",
+       "      <td>5,000</td>\n",
+       "      <td>3,000</td>\n",
+       "      <td>38,308</td>\n",
+       "      <td>65,339</td>\n",
+       "      <td>2,000</td>\n",
+       "      <td>2,000</td>\n",
+       "      <td>3,000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012</th>\n",
+       "      <td>15,495,240</td>\n",
+       "      <td>2,781,919</td>\n",
+       "      <td>4,572,333</td>\n",
+       "      <td>7,241,900</td>\n",
+       "      <td>3,082,504</td>\n",
+       "      <td>2,044,609</td>\n",
+       "      <td>3,115,223</td>\n",
+       "      <td>1,898,760</td>\n",
+       "      <td>1,256,403</td>\n",
+       "      <td>1,403,010</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3,000</td>\n",
+       "      <td>8,000</td>\n",
+       "      <td>37,000</td>\n",
+       "      <td>4,500</td>\n",
+       "      <td>3,000</td>\n",
+       "      <td>38,109</td>\n",
+       "      <td>60,776</td>\n",
+       "      <td>2,000</td>\n",
+       "      <td>2,000</td>\n",
+       "      <td>3,000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013</th>\n",
+       "      <td>17,927,730</td>\n",
+       "      <td>2,553,979</td>\n",
+       "      <td>4,562,282</td>\n",
+       "      <td>7,585,341</td>\n",
+       "      <td>2,952,431</td>\n",
+       "      <td>2,264,737</td>\n",
+       "      <td>3,040,783</td>\n",
+       "      <td>1,790,456</td>\n",
+       "      <td>1,243,868</td>\n",
+       "      <td>1,304,648</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3,500</td>\n",
+       "      <td>8,000</td>\n",
+       "      <td>35,000</td>\n",
+       "      <td>4,500</td>\n",
+       "      <td>3,000</td>\n",
+       "      <td>41,785</td>\n",
+       "      <td>43,887</td>\n",
+       "      <td>2,000</td>\n",
+       "      <td>2,000</td>\n",
+       "      <td>3,000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014</th>\n",
+       "      <td>19,707,677</td>\n",
+       "      <td>2,570,736</td>\n",
+       "      <td>4,699,591</td>\n",
+       "      <td>7,749,432</td>\n",
+       "      <td>3,036,773</td>\n",
+       "      <td>2,476,435</td>\n",
+       "      <td>2,794,687</td>\n",
+       "      <td>1,795,885</td>\n",
+       "      <td>1,359,834</td>\n",
+       "      <td>1,360,578</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1,000</td>\n",
+       "      <td>6,300</td>\n",
+       "      <td>37,100</td>\n",
+       "      <td>4,600</td>\n",
+       "      <td>3,000</td>\n",
+       "      <td>40,171</td>\n",
+       "      <td>10,400</td>\n",
+       "      <td>2,500</td>\n",
+       "      <td>2,000</td>\n",
+       "      <td>4,100</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 141 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            China      India      Japan        USA    Germany         UK  \\\n",
+       "Annee                                                                      \n",
+       "2010   13,757,794  2,387,197  4,203,181  5,635,432  2,916,259  2,030,846   \n",
+       "2011   14,472,416  2,510,313  3,509,036  6,089,403  3,173,634  1,941,253   \n",
+       "2012   15,495,240  2,781,919  4,572,333  7,241,900  3,082,504  2,044,609   \n",
+       "2013   17,927,730  2,553,979  4,562,282  7,585,341  2,952,431  2,264,737   \n",
+       "2014   19,707,677  2,570,736  4,699,591  7,749,432  3,036,773  2,476,435   \n",
+       "\n",
+       "          Brazil     France South Korea      Italy  ... Tanzania Tr.&Tobago  \\\n",
+       "Annee                                               ...                       \n",
+       "2010   2,856,540  2,251,669   1,237,482  1,961,580  ...    2,000     10,000   \n",
+       "2011   2,901,647  2,204,229   1,293,501  1,749,740  ...    3,000     10,000   \n",
+       "2012   3,115,223  1,898,760   1,256,403  1,403,010  ...    3,000      8,000   \n",
+       "2013   3,040,783  1,790,456   1,243,868  1,304,648  ...    3,500      8,000   \n",
+       "2014   2,794,687  1,795,885   1,359,834  1,360,578  ...    1,000      6,300   \n",
+       "\n",
+       "      Tunisia Turkmenistan Uganda Uruguay Venezuela  Yemen Zambia Zimbabwe  \n",
+       "Annee                                                                       \n",
+       "2010   45,000        4,500  3,000  40,000    68,210  2,000  2,000    2,000  \n",
+       "2011   35,000        5,000  3,000  38,308    65,339  2,000  2,000    3,000  \n",
+       "2012   37,000        4,500  3,000  38,109    60,776  2,000  2,000    3,000  \n",
+       "2013   35,000        4,500  3,000  41,785    43,887  2,000  2,000    3,000  \n",
+       "2014   37,100        4,600  3,000  40,171    10,400  2,500  2,000    4,100  \n",
+       "\n",
+       "[5 rows x 141 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# On garde uniquement les lignes dont l'année est égale ou supériéure à 2010 et inférieure ou égale à 2019\n",
+    "df_wide = df_wide.loc['2010':'2019']\n",
+    "df_wide.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "94ad6256",
    "metadata": {},
    "outputs": [],
@@ -1014,14 +1253,6 @@
     "# Export du DataFrame au format CSV\n",
     "df_wide.to_csv(\"../transformed_data/cars_sales.csv\", index=True, sep=';')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b6728119",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
